.provarCaches/00D410000011HE0EAM/objects/rstk__portetype__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_portetype</customHelpPage>
    <description>portetype__c</description>
    <fields>
        <fullName>rstk__External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__portetype_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__portetype_typeid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__portetype_typeid__c + &apos; (&apos; + LEFT(rstk__portetype_desc__c, (77 - LEN(rstk__portetype_typeid__c)) ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__portetype_typeid__c + &apos; &apos; +  rstk__portetype_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__portetype_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__portetype_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Shipment Route Type</relationshipLabel>
        <relationshipName>divportetypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__portetype_typeid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Route Type ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipment Route Type</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Shipment_Route_Type</fullName>
        <columns>NAME</columns>
        <columns>rstk__portetype_div__c</columns>
        <columns>rstk__portetype_typeid__c</columns>
        <columns>rstk__portetype_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Shipment Route Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Route Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__No_updates_allowed</fullName>
        <active>true</active>
        <description>Division and route type cannot be changed.</description>
        <errorConditionFormula>OR( 
ISCHANGED(rstk__portetype_div__c), 
ISCHANGED(rstk__portetype_typeid__c)
)</errorConditionFormula>
        <errorMessage>Division and route type cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_TypeId</fullName>
        <active>true</active>
        <description>Validation Type ID</description>
        <errorConditionFormula>ISCHANGED( rstk__portetype_typeid__c )</errorConditionFormula>
        <errorMessage>Type ID Change Not Allowed</errorMessage>
    </validationRules>
</CustomObject>